AUTOMAKE_OPTIONS = foreign 1.6

if AWN_OPT
AWN_OPT_DIR= gmpc-awn
endif

if LAST_FM_OPT
LAST_FM_OPT_DIR= gmpc-last.fm
endif

#if COVERAMAZON_OPT
#COVERAMAZON_OPT_DIR= gmpc-coveramazon
#endif

if LYRICWIKI_OPT
LYRICWIKI_OPT_DIR= gmpc-lyricwiki
endif

if MDCOVER_OPT 
MDCOVER_OPT_DIR= gmpc-mdcover
endif

if LYRICS_OPT
LYRICS_OPT_DIR= gmpc-lyrics
endif

if EXTRAPLAYLIST_OPT
EXTRAPLAYLIST_OPT_DIR= gmpc-extraplaylist
endif

if AVAHI_OPT
AVAHI_OPT_DIR= gmpc-avahi
endif

if LIBNOTIFY_OPT
LIBNOTIFY_OPT_DIR= gmpc-avahi
endif

if ALARM_OPT
ALARM_OPT_DIR= gmpc-alarm
endif

if JAMENDO_OPT
JAMENDO_OPT_DIR= gmpc-jamendo
endif

if LIRC_OPT
LIRC_OPT_DIR= gmpc-lirc
endif

if MAGNATUNE_OPT
MAGNATUNE_OPT_DIR= gmpc-magnatune
endif

if SHOUT_OPT
SHOUT_OPT_DIR= gmpc-shout
endif

if MSERVER_OPT
MSERVER_OPT_DIR= gmpc-mserver
endif

#if LASTFMRADIO_OPT
#LASTFMRADIO_OPT_DIR= gmpc-shout
#endif

if TAGEDIT_OPT
TAGEDIT_OPT_DIR= gmpc-tagedit
endif


if WIKIPEDIA_OPT
WIKIPEDIA_OPT_DIR= gmpc-wikipedia
endif


if PLAYLISTSORT_OPT
PLAYLISTSORT_OPT_DIR= gmpc-playlistsort
endif

#if DYNAMICPLAYLIST_OPT
#DYNAMICPLAYLIST_OPT_DIR= gmpc-dynamicplaylist
#endif

if ALBUMVIEW_OPT
ALBUMVIEW_OPT_DIR= gmpc-albumview
endif

if DISCOGS_OPT
DISCOGS_OPT_DIR= gmpc-discogs
endif

if FULLSCREENINFO_OPT
FULLSCREENINFO_OPT_DIR= gmpc-fullscreeninfo
endif

if MMKEYS_OPT
MMKEYS_OPT_DIR=gmpc-mmkeys
endif

SUBDIRS =\
		$(ALARM_OPT_DIR)\
		$(AVAHI_OPT_DIR)\
        $(AWN_OPT_DIR)\
		$(COVERAMAZON_OPT_DIR)\
		$(EXTRAPLAYLIST_OPT_DIR)\
		$(JAMENDO_OPT_DIR)\
		$(LAST_FM_OPT_DIR)\
		$(LIBNOTIFY_OPT_DIR)\
		$(LIRC_OPT_DIR)\
		$(LYRICS_OPT_DIR)\
		$(MAGNATUNE_OPT_DIR)\
		$(MDCOVER_OPT_DIR)\
		$(SHOUT_OPT_DIR)\
		$(MSERVER_OPT_DIR)\
		$(TAGEDIT_OPT_DIR)\
		$(WIKIPEDIA_OPT_DIR)\
		$(PLAYLISTSORT_OPT_DIR)\
		$(DYNAMICPLAYLIST_OPT_DIR)\
		$(LYRICSPLUGIN_OPT_DIR)\
		$(ALBUMVIEW_OPT_DIR)\
        $(DISCOGS_OPT_DIR)\
        $(LYRICWIKI_OPT_DIR)\
        $(FULLSCREENINFO_OPT_DIR)\
        $(MMKEYS_OPT_DIR)
